[package]
name = "auth"
version = "0.1.0"
authors = ["Matthew Bentley <matthew.t.bentley@gmail.com>"]

[dependencies]
nickel = "*"
r2d2_postgres = "*"
r2d2 = "*"
openssl = "0.6.7"
uuid = "*"
serde_json = "*"
rust-crypto = "*"
rustc-serialize = "*"
time = "*"
hyper = "0.6.16"
cookie = "0.1.21"
url = "0.2.38"

[dependencies.nickel_postgres]
git = "https://github.com/matthewbentley/nickel-postgres.git"

[dependencies.postgres]
version = "*"
features = ["uuid", "serde_json"]

[dependencies.cas]
git = "https://github.com/hacsoc/rust-cas.git"
